--- a/lesson-1.html
+++ b/lesson-1.html
@@ -25,6 +25,8 @@
   <h2>Task #1</h2>
   <ul>
     <li>Add a new heading (h2) that says: HELLO WORLD!</li>
+     <h2>HELLO WORLD</h2>
+
     <li>Save your changes in Notepad (or whatever text editor you're using) and refresh the page in your browser.</li>
     <li>You should see your new heading! Congrats!</li>
   </ul>
