--- a/lesson-3.html
+++ b/lesson-3.html
@@ -9,19 +9,20 @@
     /***TASK 1***/
     #task-1 {
       width: 50%;
-      transition-duration: 0.3s;
+      transition-duration: 10s;
     }
 
     /*  This style applies when you hover over an element with an id of "task-1"*/
     #task-1:hover {
-      width: 60%;
+      width: 100%;
+      background-color: mediumaquamarine;
     }
 
     /***TASK 2***/
     .animated-div {
       animation-name: my-first-animation;
       /*TODO: Update animation duration to 10s (10 seconds)*/
-      animation-duration: 2s;
+      animation-duration: 10s;
       animation-iteration-count: infinite;
       animation-direction: alternate;
     }
@@ -64,7 +65,7 @@
       a selector, those styles will only apply when you hover over an element.
     </div>
   </div>
-  <div class="dotted-div">
+  <div class="dotted-div animated-div">
     <h2>Task 2: Applying simple animation</h2>
     <p>Update this div so it has an additional class, "animated-div". This will apply an existing animation to this
       element</p>
