--- a/lesson-4.html
+++ b/lesson-4.html
@@ -60,5 +60,5 @@
 
   //TODO: Update this alert to say "hello world!"
   console.log("Hello in the console :)")
-  alert("This alert is written in JavaScript!");
+  alert("hello world!");
 </script>
