--- a/lesson-5.html
+++ b/lesson-5.html
@@ -51,6 +51,6 @@
 <script>
   /*** TASK 1 ***/
   //TODO: Update "#I-CANT-FIND-MY-ELEMENT" to be the name of the element you want to update.
-  document.querySelector("#I-CANT-FIND-MY-ELEMENT").innerHTML = "This text was set with JavaScript!";
+  document.querySelector("#update-text").innerHTML = "This text was set with JavaScript!";
 
 </script>
