--- a/lesson-9.html
+++ b/lesson-9.html
@@ -89,7 +89,7 @@
   /*** TASK 1 ***/
   function ifStatement() {
     /*TODO: Update the if statement so it's true'*/
-    if (1 + 1 == 3) {
+    if (1 + 2 == 3) {
       alert("The statement is true!")
     } else {
       alert("The statement is false. Can you update it so it's true?")
@@ -101,9 +101,9 @@
 
   /*** TODO: TASK 2 ***/
   function evaluateCheckbox() {
-    let checkboxValue = document.querySelector("#my-checkbox").value;
+    let checkboxValue = document.querySelector("#my-checkbox").checked;
     //TODO: Update the 'if' statement to use checkbox value instead of always being true.
-    if (true) {
+    if (checkboxValue){
       alert("The checkbox is checked!");
     } else {
       alert("The checkbox hasn't been checked!");
@@ -120,7 +120,7 @@
 
     //TODO: update the if statement so it checks for a finish line greater than 250
     //rather than 25
-    if (distance > 25) {
+    if (distance > 250) {
       alert("You finished the race!");
     }
   }
