--- a/lesson-10.html
+++ b/lesson-10.html
@@ -62,7 +62,7 @@
 <script>
   let x = 0;
   let y = 0;
-  let z = 0;
+  //let z = 0;
 
   let spaceship = document.querySelector("#spaceship");
 
@@ -81,15 +81,15 @@
   document.querySelector("#up").onclick = moveUp;
 
   function moveLeft() {
-    z = z - 15;
-    spaceship.style.left = z;
+    x = x - 15;
+    spaceship.style.left = x;
   }
 
   document.querySelector("#left").onclick = moveLeft;
 
   function moveRight() {
-    z = z + 15;
-    spaceship.style.left = z;
+    x = x + 15;
+    spaceship.style.left = x;
   }
 
   document.querySelector("#right").onclick = moveRight;
